--- a/_config.yml
+++ b/_config.yml
@@ -1,3 +1,3 @@
-theme: jekyll-theme-minimal
+theme: jekyll-theme-slate
 title: Sarayu's Github Page
 description: This is the main file where all of Sarayu's TPT challenges, Tech Talk Notes, and other projects will be located!
